--- a/add_tracking.html
+++ b/add_tracking.html
@@ -50,6 +50,7 @@
                     <div class="col-12 col-lg-6">
                         <div class="row no-gutters">
                             <div class="col-12 col-lg-12">
+                                <button class="btn btn-primary" onclick="window.history.go(-1); return false;">Back</button>
                                 <h1 class="tx-bold tx-center header-title">Create Trip</h1>
                             </div>
                             <div class="col-12 col-lg-12 my-2 my-lg-4 my-xl-5">
@@ -247,7 +248,7 @@
         }
 
         function reroute() {
-            window.location.href = 'trips.html';
+            window.location.href = 'tracking_list.html';
         }
 
         $(document).ready(function () {
