--- a/driver_list.html
+++ b/driver_list.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
         </section>
-        <button type="button" class="btn btn-success get-consent-btn" onclick="location.href = 'get-consent.html';"><i
+        <button type="button" class="btn btn-success get-consent-btn" onclick="location.href = 'add_driver.html';"><i
                 class="fas fa-plus-circle fa-2x"></i></button>
     </main>
 
@@ -131,16 +131,16 @@
 
         function reroute() {
             console.log("This works!")
-            window.location.href = 'tracking-data.html';
+            window.location.href = 'tracking-details.html';
         }
     </script>
 
     <nav class="nav">
-        <a href="trips.html" class="nav__link">
+        <a href="tracking_list.html" class="nav__link">
             <i class="material-icons nav__icon">drive_eta</i>
             <span class="nav__text">Trips</span>
         </a>
-        <a href="track-driver.html" class="nav__link nav__link--active">
+        <a href="driver_list.html" class="nav__link nav__link--active">
             <i class="material-icons nav__icon">groups</i>
             <span class="nav__text">Drivers</span>
         </a>
