--- a/tracking-details.html
+++ b/tracking-details.html
@@ -57,7 +57,8 @@
                     <div class="col-12 col-lg-10">
                         <div class="row no-gutters">
                             <div class="col-12 col-lg-12">
-                                <h1 class="tx-bold tx-center header-title">Tracking Data</h1>
+                                <button class="btn btn-primary" onclick="window.history.go(-1); return false;">Back</button>
+                                <h1 class="tx-bold tx-center header-title">SIM Tracking</h1>
                             </div>
                             <div class="col-12 col-lg-12 my-2 my-lg-4 my-xl-5">
                                 <div class="card">
