--- a/tracking_list.html
+++ b/tracking_list.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
         </section>
-        <button type="button" class="btn btn-success get-consent-btn" onclick="location.href = 'add-trip.html';"><i
+        <button type="button" class="btn btn-success get-consent-btn" onclick="location.href = 'add_tracking.html';"><i
                 class="fas fa-plus-circle fa-2x"></i></button>
     </main>
 
@@ -149,16 +149,16 @@
         }
 
         function reroute(mobile_number) {
-            window.location.href = `tracking-data.html?mobile_number=${mobile_number}`;
+            window.location.href = `tracking-details.html?mobile_number=${mobile_number}`;
         }
     </script>
 
     <nav class="nav">
-        <a href="trips.html" class="nav__link nav__link--active">
+        <a href="tracking_list.html" class="nav__link nav__link--active">
             <i class="material-icons nav__icon">drive_eta</i>
             <span class="nav__text">Trips</span>
         </a>
-        <a href="track-driver.html" class="nav__link">
+        <a href="driver_list.html" class="nav__link">
             <i class="material-icons nav__icon">groups</i>
             <span class="nav__text">Drivers</span>
         </a>
